--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,27 @@
 body {
-  margin: 0;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  background-repeat:no-repeat;
+  background-size:cover;
+  height:100vh;
+
+}
+
+button {
+  font-family:Mario;
+  height:30px;
+  width:200px;
+  font-size:20px;
+  background-color: ghostwhite;
+}
+h1 {
+  font-size:50px;
+  text-shadow: Red 10px 0 5px;  
 }
 
 code {
