Almost done. Will wrap up tomorrow.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Mario';
-  src: local('Mario'), url('./fonts/super_mario_rpg_font.ttf') format('truetype');
+  src: url('./fonts/super_mario_rpg_font.ttf') format('truetype');
 }
 
 .App {
