--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
-  background-repeat:no-repeat;
-  background-size:cover;
+  background-repeat:repeat;
+  background-size:contain;
   height:100vh;
+  width:100vw;
+  display:flex;
+
 
 }
 
